<resources>
    <string name="app_name" translatable="false">TripTracker</string>
    <string name="title_activity_maps" translatable="false">TripTracker</string>
    <string name="weather">Weather</string>
    <string name="tides" translatable="false">Tides</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="sun_info">Sun Info</string>
    <string name="start_trip">Start Trip</string>
    <string name="start_trip_button">Start Trip</string>
    <string name="trip_manager">Trip Manager</string>
    <string name="add_waypoint">Add Waypoint</string>
    <string name="waypoint_manager">Waypoint Manager</string>
    <string name="enter_desired_name">Enter desired name</string>
    <string name="publicBox">Public</string>
    <string name="okButton">OK</string>
    <string name="title_activity_waypoint">Waypoint Manager</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_trip">Trip Manager</string>
    <string name = "WaypointDB">Waypoints Display: </string>
    <string name="WEATHER_GOES_HERE">This is the temporary holding place for the advanced weather menu</string>
    <string name="end_time">End Time:</string>
    <string name="start_time">Start Time:</string>
    <string name="distance_traveled">Distance Traveled:</string>
    <string name="average_speed">Average Speed:</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="nameoftrip">NameOfTrip</string>

    <string name="enter_latitude">Enter Latitude:</string>
    <string name="enter_longitude">Enter Longitude:</string>
    <string name="delete_waypoint_confirm">Deleting the waypoint: </string>
    <string name="confirm">Confirm?</string>
    <string name="name_display">Name: </string>
    <string name="lat_display">Latitude: </string>
    <string name="lng_display">Longitude: </string>
    <string name="yes_caps">YES</string>
    <string name="no_caps">NO</string>
    <string name="edit_point">Edit Waypoint: </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="make_public_box">Make Public</string>
    <string name="publicNote">NOTE: once saved as public, a waypoint cannot be edited or deleted</string>
    <string name="current_location_box">Use Current Location</string>
    <string name="manual_note">NOTE: to create a waypoint at your current location, please return to the
        map and use Menu -> Add new Waypoint</string>
    <string name="re_center">Re-Center</string>
    <string name="menu_close">Close</string>
    <string name="menu_menu">Menu</string>
    <string name="end_trip">End Trip</string>
    <string name="local_display">Local Waypoints: </string>
    <string name="public_display">Public Waypoints: </string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
</resources>
