<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tripName"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="9dp"
        android:text="@string/nameoftrip"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginTop="63dp"
        android:text="@string/end_time" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginTop="43dp"
        android:text="@string/start_time" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginTop="88dp"
        android:text="@string/distance_traveled" />

    <TextView
        android:id="@+id/speedText"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginTop="109dp"
        android:text="@string/average_speed" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="58dp"
        android:text="@string/delete"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/showButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="158dp"
        android:text="@string/show"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>
